--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Awesome </title>
+  <title>Awesome Theme Park | Home</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="Team 29">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
