Updated section structures, Added missing image alt tags, Removed unnecessary ul role attributes

--- a/attractions.html
+++ b/attractions.html
@@ -20,7 +20,7 @@
     <header>
         <div class="nav_container">
             <nav class="utility">
-                <ul role="navigation">
+                <ul>
                     <li>
                         <a href="">82 ° F</a>
                     </li>
@@ -35,7 +35,7 @@
         </div>
         <div class="nav_container">
             <nav class="primary">
-                <ul role="navigation">
+                <ul>
                     <li class="logo">
                         <a href="index.html">
                             <img src="img/pirate-logo.png" height="80" alt="Logo" />
@@ -61,73 +61,74 @@
         </div>
     </header>
     <main class="attractions">
-        <h1>Awesome Attractions</h1>
-        <p>Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo. Sed vestibulum velit elit, sit amet convallis eros lacinia quis. Phasellus quis ipsum finibus, pretium nulla non, semper ante. Praesent convallis augue vitae consectetur maximus. Integer porttitor augue eu quam posuere, eget pretium dolor facilisis. Donec vitae ex interdum, accumsan metus sed, mollis magna. Vivamus tortor lorem, consequat in ipsum a, accumsan faucibus arcu. Praesent dignissim purus id fermentum commodo. Integer porttitor in nibh vitae vestibulum.</p>
-        <div class="filter_container">
-            <h4>Filter By</h4>
-            <label for="age">
-                Age: 
-                <select name="age" id="age">
-                    <option>One</option>
-                    <option>Two</option>
-                    <option>Three</option>
-                </select>    
-            </label>
-            <label for="height">
-                Height: 
-                <select name="height" id="height">
-                    <option>One</option>
-                    <option>Two</option>
-                    <option>Three</option>
-                </select>    
-            </label>
-            <label for="thrill">
-                Thrill Level: 
-                <select name="thrill" id="thrill">
-                    <option>One</option>
-                    <option>Two</option>
-                    <option>Three</option>
-                </select>    
-            </label>
-        </div>
-        <div class="attraction_container">
-            <div class="attraction">
-                <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
+        <section>
+            <h1>Awesome Attractions</h1>
+            <p>Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo. Sed vestibulum velit elit, sit amet convallis eros lacinia quis. Phasellus quis ipsum finibus, pretium nulla non, semper ante. Praesent convallis augue vitae consectetur maximus. Integer porttitor augue eu quam posuere, eget pretium dolor facilisis. Donec vitae ex interdum, accumsan metus sed, mollis magna. Vivamus tortor lorem, consequat in ipsum a, accumsan faucibus arcu. Praesent dignissim purus id fermentum commodo. Integer porttitor in nibh vitae vestibulum.</p>
+            <div class="filter_container">
+                <h4>Filter By</h4>
+                <label for="age">
+                    Age: 
+                    <select name="age" id="age">
+                        <option>One</option>
+                        <option>Two</option>
+                        <option>Three</option>
+                    </select>    
+                </label>
+                <label for="height">
+                    Height: 
+                    <select name="height" id="height">
+                        <option>One</option>
+                        <option>Two</option>
+                        <option>Three</option>
+                    </select>    
+                </label>
+                <label for="thrill">
+                    Thrill Level: 
+                    <select name="thrill" id="thrill">
+                        <option>One</option>
+                        <option>Two</option>
+                        <option>Three</option>
+                    </select>    
+                </label>
             </div>
-            <div class="attraction">
-                <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
-            </div>
-            <div class="attraction">
-                <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
-            </div>
-            <div class="attraction">
-                <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
-            </div>
-            <div class="attraction">
-                <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
-            </div>
-            <div class="attraction">
-                <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
-            </div>
-            <div class="attraction">
-                <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
-            </div>
-            <div class="attraction">
-                <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
-            </div>
-            <div class="attraction">
-                <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
-            </div>
-            <div class="attraction">
-                <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
-            </div>
-            <div class="attraction">
-                <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
-            </div>
-            <div class="attraction">
-                <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
-            </div>
-        </div>
+            <div class="attraction_container">
+                <div class="attraction">
+                    <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
+                </div>
+                <div class="attraction">
+                    <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
+                </div>
+                <div class="attraction">
+                    <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
+                </div>
+                <div class="attraction">
+                    <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
+                </div>
+                <div class="attraction">
+                    <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
+                </div>
+                <div class="attraction">
+                    <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
+                </div>
+                <div class="attraction">
+                    <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
+                </div>
+                <div class="attraction">
+                    <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
+                </div>
+                <div class="attraction">
+                    <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
+                </div>
+                <div class="attraction">
+                    <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
+                </div>
+                <div class="attraction">
+                    <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
+                </div>
+                <div class="attraction">
+                    <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
+                </div>
+            </div>        </section>
     </main>
     <footer>
         <div class="inner">
@@ -155,16 +156,16 @@
             <nav class="social">
                 <ul>
                     <li>
-                        <a href="#"><img src="img/facebook.svg" width="50" /></a>
+                        <a href="#"><img src="img/facebook.svg" width="50" alt="Facebook" /></a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/twitter.svg" width="50" /></a>
+                        <a href="#"><img src="img/twitter.svg" width="50" alt="Twitter" /></a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/instagram.svg" width="50" /></a>
+                        <a href="#"><img src="img/instagram.svg" width="50" alt="Instagram" /></a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/youtube.svg" width="50" /></a>
+                        <a href="#"><img src="img/youtube.svg" width="50" alt="YouTube" /></a>
                     </li>
                 </ul>
             </nav>
