--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <div class="nav_container">
             <nav class="utility">
-                <ul role="navigation">
+                <ul>
                     <li>
                         <a href="">82 ° F</a>
                     </li>
@@ -35,7 +35,7 @@
         </div>
         <div class="nav_container">
             <nav class="primary">
-                <ul role="navigation">
+                <ul>
                     <li class="logo">
                         <a href="index.html">
                             <img src="img/pirate-logo.png" height="80" alt="Logo" />
@@ -68,19 +68,14 @@
             </div>
         </div>
         
-        <!-- Events section -->
-        <section>
-            <div></div>
-            <div></div>
-        </section>
-        <section class="event_container">
+        <div class="event_container">
             <div class="event current">
                 <img src="https://via.placeholder.com/590x400?text=Current+Events" alt="Image two" />
             </div>
             <div class="event upcoming">
                 <img src="https://via.placeholder.com/590x400?text=Upcoming+Events" alt="Image three" />
             </div>
-        </section>
+        </div>
     </main>
     <footer>
         <div class="inner">
@@ -108,16 +103,16 @@
             <nav class="social">
                 <ul>
                     <li>
-                        <a href="#"><img src="img/facebook.svg" width="50" /></a>
+                        <a href="#"><img src="img/facebook.svg" width="50" alt="Facebook" /></a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/twitter.svg" width="50" /></a>
+                        <a href="#"><img src="img/twitter.svg" width="50" alt="Twitter" /></a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/instagram.svg" width="50" /></a>
+                        <a href="#"><img src="img/instagram.svg" width="50" alt="Instagram" /></a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/youtube.svg" width="50" /></a>
+                        <a href="#"><img src="img/youtube.svg" width="50" alt="YouTube" /></a>
                     </li>
                 </ul>
             </nav>
