--- a/tickets.html
+++ b/tickets.html
@@ -20,7 +20,7 @@
     <header>
         <div class="nav_container">
             <nav class="utility">
-                <ul role="navigation">
+                <ul>
                     <li>
                         <a href="">82 ° F</a>
                     </li>
@@ -35,7 +35,7 @@
         </div>
         <div class="nav_container">
             <nav class="primary">
-                <ul role="navigation">
+                <ul>
                     <li class="logo">
                         <a href="index.html">
                             <img src="img/pirate-logo.png" height="80" alt="Logo" />
@@ -61,29 +61,31 @@
         </div>
     </header>
     <main class="tickets">
-        <h1>Buy Tickets</h1>
-        <p>Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo. Sed vestibulum velit elit, sit amet convallis eros lacinia quis. Phasellus quis ipsum finibus, pretium nulla non, semper ante. Praesent convallis augue vitae consectetur maximus. Integer porttitor augue eu quam posuere, eget pretium dolor facilisis. Donec vitae ex interdum, accumsan metus sed, mollis magna. Vivamus tortor lorem, consequat in ipsum a, accumsan faucibus arcu. Praesent dignissim purus id fermentum commodo. Integer porttitor in nibh vitae vestibulum.</p>
-        <div class="ticket_container">
-            <div class="ticket">
-                <h3>Ticket 1</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque cursus malesuada tortor eu rutrum. Praesent sapien mi, volutpat quis ipsum sed, tincidunt interdum arcu. Pellentesque in est in nibh pellentesque accumsan. Nullam rutrum ex sed scelerisque accumsan. Vivamus porta purus sem, sed feugiat ligula hendrerit vitae. Quisque vel mi ut odio dapibus vehicula at ac tortor. Nam ligula nunc, mattis ut lacinia et, iaculis at dolor. Sed congue nunc malesuada leo porttitor finibus.
-                </p>
-                <button>Buy Now</button>
-            </div>
-            <div class="ticket">
-                <h3>Ticket 2</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque cursus malesuada tortor eu rutrum. Praesent sapien mi, volutpat quis ipsum sed, tincidunt interdum arcu. Pellentesque in est in nibh pellentesque accumsan. Nullam rutrum ex sed scelerisque accumsan. Vivamus porta purus sem, sed feugiat ligula hendrerit vitae. Quisque vel mi ut odio dapibus vehicula at ac tortor. Nam ligula nunc, mattis ut lacinia et, iaculis at dolor. Sed congue nunc malesuada leo porttitor finibus.
-                </p>
-                <button>Buy Now</button>
-            </div>
-            <div class="ticket">
-                <h3>Ticket 3</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque cursus malesuada tortor eu rutrum. Praesent sapien mi, volutpat quis ipsum sed, tincidunt interdum arcu. Pellentesque in est in nibh pellentesque accumsan. Nullam rutrum ex sed scelerisque accumsan. Vivamus porta purus sem, sed feugiat ligula hendrerit vitae. Quisque vel mi ut odio dapibus vehicula at ac tortor. Nam ligula nunc, mattis ut lacinia et, iaculis at dolor. Sed congue nunc malesuada leo porttitor finibus.
-                </p>
-                <button>Buy Now</button>
+        <section>
+            <h1>Buy Tickets</h1>
+            <p>Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo. Sed vestibulum velit elit, sit amet convallis eros lacinia quis. Phasellus quis ipsum finibus, pretium nulla non, semper ante. Praesent convallis augue vitae consectetur maximus. Integer porttitor augue eu quam posuere, eget pretium dolor facilisis. Donec vitae ex interdum, accumsan metus sed, mollis magna. Vivamus tortor lorem, consequat in ipsum a, accumsan faucibus arcu. Praesent dignissim purus id fermentum commodo. Integer porttitor in nibh vitae vestibulum.</p>
+            <div class="ticket_container">
+                <div class="ticket">
+                    <h3>Ticket 1</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque cursus malesuada tortor eu rutrum. Praesent sapien mi, volutpat quis ipsum sed, tincidunt interdum arcu. Pellentesque in est in nibh pellentesque accumsan. Nullam rutrum ex sed scelerisque accumsan. Vivamus porta purus sem, sed feugiat ligula hendrerit vitae. Quisque vel mi ut odio dapibus vehicula at ac tortor. Nam ligula nunc, mattis ut lacinia et, iaculis at dolor. Sed congue nunc malesuada leo porttitor finibus.
+                    </p>
+                    <button>Buy Now</button>
+                </div>
+                <div class="ticket">
+                    <h3>Ticket 2</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque cursus malesuada tortor eu rutrum. Praesent sapien mi, volutpat quis ipsum sed, tincidunt interdum arcu. Pellentesque in est in nibh pellentesque accumsan. Nullam rutrum ex sed scelerisque accumsan. Vivamus porta purus sem, sed feugiat ligula hendrerit vitae. Quisque vel mi ut odio dapibus vehicula at ac tortor. Nam ligula nunc, mattis ut lacinia et, iaculis at dolor. Sed congue nunc malesuada leo porttitor finibus.
+                    </p>
+                    <button>Buy Now</button>
+                </div>
+                <div class="ticket">
+                    <h3>Ticket 3</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque cursus malesuada tortor eu rutrum. Praesent sapien mi, volutpat quis ipsum sed, tincidunt interdum arcu. Pellentesque in est in nibh pellentesque accumsan. Nullam rutrum ex sed scelerisque accumsan. Vivamus porta purus sem, sed feugiat ligula hendrerit vitae. Quisque vel mi ut odio dapibus vehicula at ac tortor. Nam ligula nunc, mattis ut lacinia et, iaculis at dolor. Sed congue nunc malesuada leo porttitor finibus.
+                    </p>
+                    <button>Buy Now</button>
+                </div>
             </div>
         </section>
     </main>
@@ -113,16 +115,16 @@
             <nav class="social">
                 <ul>
                     <li>
-                        <a href="#"><img src="img/facebook.svg" width="50" /></a>
+                        <a href="#"><img src="img/facebook.svg" width="50" alt="Facebook" /></a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/twitter.svg" width="50" /></a>
+                        <a href="#"><img src="img/twitter.svg" width="50" alt="Twitter" /></a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/instagram.svg" width="50" /></a>
+                        <a href="#"><img src="img/instagram.svg" width="50" alt="Instagram" /></a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/youtube.svg" width="50" /></a>
+                        <a href="#"><img src="img/youtube.svg" width="50" alt="YouTube" /></a>
                     </li>
                 </ul>
             </nav>
