--- a/tickets.html
+++ b/tickets.html
@@ -94,37 +94,42 @@
             <nav>
                 <ul>
                     <li>
-                        <h5>Help</h5>
+                        <h5>Park Information</h5>
                         <ul>
                             <li>
-                                <a href="#">About</a>
+                                <a href="#">About Us</a>
+                            </li>
+                            <li>
+                                <a href="#">Directions & Map</a>
+                            </li>
+                            <li>
+                                <a href="#">FAQ</a>
                             </li>
                             <li>
                                 <a href="#">Contact Us</a>
-                            </li>
-                            <li>
-                                <a href="#">Safety</a>
-                            </li>
-                            <li>
-                                <a href="#">Help Center</a>
                             </li>    
                         </ul>
                     </li>
                 </ul>
             </nav>
-            <nav class="social">
+            <nav>
                 <ul>
                     <li>
-                        <a href="#"><img src="img/facebook.svg" width="50" alt="Facebook" /></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="img/twitter.svg" width="50" alt="Twitter" /></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="img/instagram.svg" width="50" alt="Instagram" /></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="img/youtube.svg" width="50" alt="YouTube" /></a>
+                        <h5>Things To Do</h5>
+                        <ul>
+                            <li>
+                                <a href="#">Rides</a>
+                            </li>
+                            <li>
+                                <a href="#">Dining</a>
+                            </li>
+                            <li>
+                                <a href="#">Shopping</a>
+                            </li>
+                            <li>
+                                <a href="#">Events</a>
+                            </li>    
+                        </ul>
                     </li>
                 </ul>
             </nav>
@@ -137,6 +142,23 @@
                                 <a href="#">Sign Up</a>
                             </li>
                         </ul>
+                    </li>
+                </ul>
+            </nav>
+            <nav class="social">
+                <h5>Social Media</h5>
+                <ul>
+                    <li>
+                        <a href="#"><img src="img/facebook.svg" width="50" alt="Facebook" /></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="img/twitter.svg" width="50" alt="Twitter" /></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="img/instagram.svg" width="50" alt="Instagram" /></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="img/youtube.svg" width="50" alt="YouTube" /></a>
                     </li>
                 </ul>
             </nav>
