Updated meta description, Updated page titles

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Awesome Theme Park | Home</title>
-  <meta name="description" content="The HTML5 Herald">
+  <title>Pirate Theme Park | Home</title>
+  <meta name="description" content="Arrrsome Pirate Theme Park">
   <meta name="author" content="Team 29">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
