Add animatino to attractions and even boxes

--- a/attractions.html
+++ b/attractions.html
@@ -92,40 +92,40 @@
                 </label>
             </div>
             <div class="attraction_container">
-                <div class="attraction">
+                <div class="attraction border-animation">
                     <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
                 </div>
-                <div class="attraction">
+                <div class="attraction border-animation">
                     <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
                 </div>
-                <div class="attraction">
+                <div class="attraction border-animation">
                     <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
                 </div>
-                <div class="attraction">
+                <div class="attraction border-animation">
                     <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
                 </div>
-                <div class="attraction">
+                <div class="attraction border-animation">
                     <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
                 </div>
-                <div class="attraction">
+                <div class="attraction border-animation">
                     <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
                 </div>
-                <div class="attraction">
+                <div class="attraction border-animation">
                     <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
                 </div>
-                <div class="attraction">
+                <div class="attraction border-animation">
                     <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
                 </div>
-                <div class="attraction">
+                <div class="attraction border-animation">
                     <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
                 </div>
-                <div class="attraction">
+                <div class="attraction border-animation">
                     <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
                 </div>
-                <div class="attraction">
+                <div class="attraction border-animation">
                     <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
                 </div>
-                <div class="attraction">
+                <div class="attraction border-animation">
                     <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
                 </div>
             </div>        </section>
