added park name and id for animations
added theme park name and gave it an id to use to animate it in the animations.css file - LM253

--- a/attractions.html
+++ b/attractions.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="css/animations.css">
 
 </head>
 
@@ -41,6 +42,18 @@
                             <img src="img/pirate-logo.png" height="80" alt="Logo" />
                         </a>
                     </li>
+
+                    <li id="park_name">
+                        <a href="index.html" style="text-shadow:
+                            2px 2px 2px black, 
+                            3.5px 3.5px 3.5px burlywood; 
+                            font-family: Verdana, Geneva, Tahoma, sans-serif;
+                            letter-spacing: 2px; font-size: 107.5%;
+                            right: 50px;
+                            ">
+                            Arrrsome Pirate Theme Park!</a>
+                    </li>
+
                     <li>
                         <a href="attractions.html">Attractions</a>
                     </li>
@@ -92,40 +105,40 @@
                 </label>
             </div>
             <div class="attraction_container">
-                <div class="attraction border-animation">
+                <div class="attraction">
                     <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
                 </div>
-                <div class="attraction border-animation">
+                <div class="attraction">
                     <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
                 </div>
-                <div class="attraction border-animation">
+                <div class="attraction">
                     <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
                 </div>
-                <div class="attraction border-animation">
+                <div class="attraction">
                     <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
                 </div>
-                <div class="attraction border-animation">
+                <div class="attraction">
                     <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
                 </div>
-                <div class="attraction border-animation">
+                <div class="attraction">
                     <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
                 </div>
-                <div class="attraction border-animation">
+                <div class="attraction">
                     <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
                 </div>
-                <div class="attraction border-animation">
+                <div class="attraction">
                     <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
                 </div>
-                <div class="attraction border-animation">
+                <div class="attraction">
                     <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
                 </div>
-                <div class="attraction border-animation">
+                <div class="attraction">
                     <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
                 </div>
-                <div class="attraction border-animation">
+                <div class="attraction">
                     <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
                 </div>
-                <div class="attraction border-animation">
+                <div class="attraction">
                     <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
                 </div>
             </div>        </section>
