--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="css/animations.css">
 
 </head>
 
@@ -41,6 +42,18 @@
                             <img src="img/pirate-logo.png" height="80" alt="Logo" />
                         </a>
                     </li>
+
+                    <li id="park_name">
+                        <a href="index.html" style="text-shadow:
+                            2px 2px 2px black, 
+                            3.5px 3.5px 3.5px burlywood; 
+                            font-family: Verdana, Geneva, Tahoma, sans-serif;
+                            letter-spacing: 2px; font-size: 107.5%;
+                            right: 50px;
+                            ">
+                            Arrrsome Pirate Theme Park!</a>
+                    </li>
+                    
                     <li>
                         <a href="attractions.html">Attractions</a>
                     </li>
@@ -57,6 +70,7 @@
                         <a href="tickets.html">Book Now</a>
                     </li>
                 </ul>
+
             </nav>    
         </div>
     </header>
@@ -69,10 +83,10 @@
         </div>
         
         <div class="event_container">
-            <div class="event current grow">
+            <div class="event current">
                 <img src="https://via.placeholder.com/590x400?text=Current+Events" alt="Image two" />
             </div>
-            <div class="event upcoming grow">
+            <div class="event upcoming">
                 <img src="https://via.placeholder.com/590x400?text=Upcoming+Events" alt="Image three" />
             </div>
         </div>
