Added the border animation, they were missing after the last commit

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
         </div>
         
         <div class="event_container">
-            <div class="event current">
+            <div class="event current grow">
                 <img src="https://via.placeholder.com/590x400?text=Current+Events" alt="Image two" />
             </div>
-            <div class="event upcoming">
+            <div class="event upcoming grow">
                 <img src="https://via.placeholder.com/590x400?text=Upcoming+Events" alt="Image three" />
             </div>
         </div>
