--- a/attractions.html
+++ b/attractions.html
@@ -106,35 +106,35 @@
             </div>
             <div class="attraction_container">
                 <div class="attraction border-animation grow">
-                    <img src="/img/att1.jpg" alt="Attraction" />
+                    <img src="img/att1.jpg" alt="Attraction" />
                     <div class="attraction_img_discr">Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo.</div>
                 </div>
                 <div class="attraction border-animation grow">
-                    <img src="/img/att2.jpg" alt="Attraction" />
+                    <img src="img/att2.jpg" alt="Attraction" />
                     <div class="attraction_img_discr">Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo.</div>
                 </div>
                 <div class="attraction border-animation grow">
-                    <img src="/img/att3.jpg" alt="Attraction" />
+                    <img src="img/att3.jpg" alt="Attraction" />
                     <div class="attraction_img_discr">Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo.</div>
                 </div>
                 <div class="attraction border-animation grow">
-                    <img src="/img/att4.jpg" alt="Attraction" />
+                    <img src="img/att4.jpg" alt="Attraction" />
                     <div class="attraction_img_discr">Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo.</div>
                 </div>
                 <div class="attraction border-animation grow">
-                    <img src="/img/att5.jpg" alt="Attraction" />
+                    <img src="img/att5.jpg" alt="Attraction" />
                     <div class="attraction_img_discr">Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo.</div>
                 </div>
                 <div class="attraction border-animation grow">
-                    <img src="/img/att6.jpg" alt="Attraction" />
+                    <img src="img/att6.jpg" alt="Attraction" />
                     <div class="attraction_img_discr">Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo.</div>
                 </div>
                 <div class="attraction border-animation grow">
-                    <img src="/img/att7.jpeg" alt="Attraction" />
+                    <img src="img/att7.jpeg" alt="Attraction" />
                     <div class="attraction_img_discr">Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo.</div>
                 </div>
                 <div class="attraction border-animation grow">
-                    <img src="/img/att9.jpg" alt="Attraction" />
+                    <img src="img/att9.jpg" alt="Attraction" />
                     <div class="attraction_img_discr">Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo.</div>
                 </div>
             </div>        </section>
