--- a/tickets.html
+++ b/tickets.html
@@ -45,7 +45,7 @@
 
                     <li id="park_name">
                         <a href="index.html">
-                            Arrrsome Pirate Theme Park!
+                            Arrrsome Pirate Theme Park
                         </a>
                     </li>
 
